# HSP

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile.hsp-s3  README.md  SECURITY.md  go.work  go.work.sum  hsp_backlog_epics_tasks_ru.docx  hsp_backlog_epics_tasks_ru.md  hsp_tz_ru.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: security-review.md
.github/workflows/: ci.yml
cli/hspctl/: go.mod  go.sum  main.go
conformance/: README.md
conformance/hsp-conformance/: Cargo.toml
conformance/hsp-conformance/src/: main.rs
crates/hsp-auth/: Cargo.toml
crates/hsp-auth/src/: lib.rs
crates/hsp-core/: Cargo.toml
crates/hsp-core/src/: lib.rs
crates/hsp-crypto/: Cargo.toml
crates/hsp-crypto/src/: lib.rs
crates/hsp-distribution/: Cargo.toml
crates/hsp-distribution/src/: lib.rs
crates/hsp-path/: Cargo.toml
crates/hsp-path/src/: lib.rs
crates/hsp-service/: Cargo.toml
crates/hsp-service/src/: lib.rs  store.rs
crates/hsp-wire/: Cargo.toml
crates/hsp-wire/src/: lib.rs
deploy/: README.md
deploy/kubernetes/: hsp-cdn-deployment.yaml  hsp-gw-deployment.yaml  hsp-lifecycle-worker.yaml  hsp-object-lock-worker.yaml  hsp-replication-worker.yaml  hsp-s3-deployment.yaml  hspd-deployment.yaml  network-policy.yaml
docs/: distribution-layer-v1-plan.md  hsp-100-completion-status.md  ping-large-media-integration.md  product-overview.md  release-artifacts.md  threat-model-v1.md  versioning-policy.md
docs/adr/: 0001-rust-reference-implementation.md  0002-public-multitenant-security-baseline.md  0003-crypto-profile-and-key-management.md  0004-encrypted-dedup-boundaries.md  template.md
docs/release-evidence/: compatibility-matrix.md  external-review.md  owner-security-signoff.md  runbook-drills.md  security-gates.md
docs/releases/: v0.1.0.md  v0.1.1.md  v0.1.2.md
docs/runbooks/: cdn-purge-failures.md  incident-response.md  key-recovery.md  replication-lag.md
docs/security/: hardened-deployment-profile.md
docs/upgrade/: v0.1.0.md  v0.1.1.md  v0.1.2.md
gateway/hsp-cdn/: Cargo.toml
gateway/hsp-cdn/src/: lib.rs  main.rs
gateway/hsp-gw/: Cargo.toml
gateway/hsp-gw/src/: lib.rs  main.rs
scripts/: bootstrap-local.sh  generate_release_review_bundle.sh
sdk/go/: go.mod  go.sum
sdk/go/alpha/: validation.go  validation_test.go
sdk/go/gatewaybeta/: client.go  client_test.go  stream.go
sdk/go/nativebeta/: client.go  client_test.go
sdk/go/protocol/: defaults.go  types.go
sdk/go/security/: profile.go  profile_test.go
server/hsp-s3/: Cargo.toml
server/hsp-s3/src/: lib.rs  main.rs
server/hspd/: Cargo.toml
server/hspd/src/: lib.rs  main.rs
spec/: README.md
spec/registries/: README.md
spec/v1/: crypto-profile.md  security-profile.md
testdata/golden/: negative-missing-jti.json  negative-path-confusion.json  public-multitenant-profile.json  secure-alpha-bootstrap.json  secure-alpha-info.json
