[workspace]
members = [
  "crates/hsp-core",
  "crates/hsp-crypto",
  "crates/hsp-auth",
  "crates/hsp-path",
  "crates/hsp-wire",
  "crates/hsp-service",
  "crates/hsp-distribution",
  "server/hspd",
  "server/hsp-s3",
  "gateway/hsp-gw",
  "gateway/hsp-cdn",
  "conformance/hsp-conformance",
]
resolver = "2"

[workspace.package]
version = "0.1.2"
edition = "2021"
license = "Apache-2.0 OR MIT"
authors = ["HSP contributors"]
repository = "https://example.invalid/hsp"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.dependencies]
aes-gcm = "0.10"
axum = "0.8"
base64 = "0.22"
bytes = "1"
chacha20poly1305 = "0.10"
ciborium = "0.2"
coset = "0.4"
data-encoding = "2.6"
ed25519-dalek = "2"
futures = "0.3"
h3 = "0.0.8"
h3-quinn = "0.0.10"
hex = "0.4"
hmac = "0.12"
http = "1"
hkdf = "0.12"
quick-xml = { version = "0.37", features = ["serialize"] }
quinn = "0.11.9"
rand = "0.8"
rcgen = "0.14"
rustls = "0.23"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
time = { version = "0.3", features = ["formatting"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "time", "io-util", "sync"] }
tower = "0.5"
ureq = "2"
webpki-roots = "0.26"
