[package]
name = "hsp-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
base64.workspace = true
ciborium.workspace = true
data-encoding.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
