[package]
name = "hsp-crypto"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
hsp-core = { path = "../hsp-core" }
aes-gcm.workspace = true
base64.workspace = true
chacha20poly1305.workspace = true
hkdf.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
