[package]
name = "hsp-distribution"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
base64.workspace = true
ciborium.workspace = true
coset.workspace = true
ed25519-dalek.workspace = true
hmac.workspace = true
http.workspace = true
quick-xml.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
hsp-auth = { path = "../hsp-auth" }
hsp-core = { path = "../hsp-core" }
hsp-crypto = { path = "../hsp-crypto" }
hsp-path = { path = "../hsp-path" }
hsp-service = { path = "../hsp-service" }

[dev-dependencies]
tokio.workspace = true
