[package]
name = "hsp-service"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
base64.workspace = true
hex.workspace = true
hmac.workspace = true
hsp-auth = { path = "../hsp-auth" }
hsp-core = { path = "../hsp-core" }
hsp-crypto = { path = "../hsp-crypto" }
hsp-path = { path = "../hsp-path" }
rustls.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
time.workspace = true
ureq.workspace = true
webpki-roots.workspace = true
