[package]
name = "hsp-gw"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
hsp-auth = { path = "../../crates/hsp-auth" }
hsp-core = { path = "../../crates/hsp-core" }
hsp-crypto = { path = "../../crates/hsp-crypto" }
hsp-service = { path = "../../crates/hsp-service" }
base64.workspace = true
bytes.workspace = true
ciborium.workspace = true
coset.workspace = true
ed25519-dalek.workspace = true
h3.workspace = true
h3-quinn.workspace = true
http.workspace = true
quinn.workspace = true
rcgen.workspace = true
rustls.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
