[package]
name = "hsp-s3"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
axum.workspace = true
base64.workspace = true
ed25519-dalek.workspace = true
hsp-auth = { path = "../../crates/hsp-auth" }
hsp-core = { path = "../../crates/hsp-core" }
hsp-crypto = { path = "../../crates/hsp-crypto" }
hsp-distribution = { path = "../../crates/hsp-distribution" }
hsp-service = { path = "../../crates/hsp-service" }
quick-xml.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower.workspace = true
