[package]
name = "hspd"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
hsp-wire = { path = "../../crates/hsp-wire" }
hsp-auth = { path = "../../crates/hsp-auth" }
hsp-core = { path = "../../crates/hsp-core" }
hsp-crypto = { path = "../../crates/hsp-crypto" }
hsp-path = { path = "../../crates/hsp-path" }
hsp-service = { path = "../../crates/hsp-service" }
base64.workspace = true
bytes.workspace = true
ciborium.workspace = true
coset.workspace = true
ed25519-dalek.workspace = true
quinn.workspace = true
rcgen.workspace = true
rustls.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
